Made Get function

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -8,3 +8,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-user-form></app-user-form>
+<app-fetch-user></app-fetch-user>
