--- a/frontend/src/app/user-form/user-form.css
+++ b/frontend/src/app/user-form/user-form.css
@@ -3,9 +3,15 @@
     flex-direction: column;
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 2rem auto;
     padding: 20px;
     background-color: #f9f9f9;
+    border-radius: 2rem;
+}
+.user-form h1 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .input {
@@ -34,4 +40,9 @@
     color: white;
     font-size: 16px;
     cursor: pointer;
+}
+
+.disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 }
